# skui-ng

./: README.md
cmake/: 3rdparty_options.cmake  toolchain_options.cmake
core/: CMakeLists.txt  application.cpp  application.h  bitflag.h  bounded_property.h  command.cpp  command_queue.cpp  command_queue.h  debug.h  event_loop.cpp  event_loop.h  library.cpp  library.h  library_unix.cpp  library_windows.cpp  property.h  proxy_property.h  signal.h  slot.h  trackable.cpp  utility.cpp  utility.h
core/utility/: approximate_equal_to.h
css/: CMakeLists.txt  color.h  color_stop.h  declaration_block.h  grammar.cpp  grammar.h  parser.cpp  parser.h  position.h  rule_set.h  selector.cpp  selector.h
css/grammar/: align_content.cpp  align_content.h  align_items.cpp  align_items.h  align_self.cpp  align_self.h  angle.h  animation.cpp  animation.h  backface_visibility.cpp  backface_visibility.h  background.cpp  background.h  box_decoration_break.cpp  box_decoration_break.h  box_shadow.h  box_sizing.cpp  box_sizing.h  caption_side.cpp  caption_side.h  clear.cpp  clear.h  color.cpp  color.h  color_stop.h  conic_gradient.h  declaration_block.h  length.cpp  length.h  linear_gradient.cpp  linear_gradient.h  make_property.h  numeric.h  position.cpp  position.h  property.cpp  property.h  property_symbols_table.h  quoted_string.h  radial_gradient.cpp  (+5 more)
css/property/: animation.h  background.h  background_gradient.h  border.h  box_decoration_break.h  box_shadow.h  conic_gradient.h  linear_gradient.h  radial_gradient.h
examples/widget_gallery/: CMakeLists.txt  widget_gallery.cpp
graphics/: CMakeLists.txt  bounding_box.h  canvas.cpp  canvas.h  color.h  context.cpp  context.h  drawable.cpp  drawable.h  gradient.h  position.h  raster_context.cpp  raster_context.h  scene.cpp  scene.h  shape.cpp  shape.h  size.h  skia_canvas.cpp  skia_canvas.h  skia_gl_canvas.cpp  skia_gl_canvas.h  skia_gl_context.cpp  skia_gl_context.h  skia_gradient.cpp  skia_gradient.h  skia_raster_canvas.cpp  skia_raster_canvas.h  skia_utility.cpp  skia_utility.h  swizzle.cpp
graphics/gradient/: linear_gradient.h  radial_gradient.h  sweep_gradient.h  two_point_conical_gradient.h
graphics/shape/: ellipse.cpp  ellipse.h  path.cpp  path.h  rectangle.cpp  rectangle.h  text.cpp  text.h
graphics/style/: border.h  fill.h  font.h  line.h  spacing.h
gui/: CMakeLists.txt  element.cpp  element.h  events.cpp  events_linux.cpp  events_macosx.cpp  events_windows.cpp  icon.h  input.h  layout.cpp  layout.h  main_windows.cpp  make_element.h  native_visual.cpp  native_visual.h  native_window.cpp  native_window.h  native_window_linux.cpp  native_window_macosx.cpp  native_window_windows.cpp  window.cpp  window.h  window_flags.h  window_linux.cpp  window_macosx.cpp  window_windows.cpp
gui/element/: graphics_view.cpp  graphics_view.h  label.cpp  label.h  spacer.cpp  spacer.h
gui/events/: appkit.cpp  appkit.h  uikit.cpp  uikit.h  win32.cpp  win32.h  xcb.cpp  xcb.h
gui/input/: button.cpp  scroll.cpp
gui/layout/: column.cpp  column.h  orientation.h  row.cpp  row.h
gui/native_visual/: cgl.cpp  cgl.h  coregraphics.cpp  coregraphics.h  egl.cpp  egl.h  glx.cpp  glx.h  raster.cpp  raster.h  wgl.cpp  wgl.h  win32.cpp  win32.h  xcb.cpp  xcb.h
gui/native_window/: appkit.cpp  appkit.h  uikit.cpp  uikit.h  win32.cpp  win32.h  xcb.cpp  xcb.h  xlib.cpp  xlib.h
opengl/: CMakeLists.txt  function_type.h  functions.cpp  functions.h  version.h
system/: CMakeLists.txt  environment.cpp  environment.h  environment_unix.cpp  environment_windows.cpp
tests/: CMakeLists.txt  test.h
tests/core/: application.test.cpp  bitflag.test.cpp  bounded_property.test.cpp  command.test.cpp  command_queue.test.cpp  event_loop.test.cpp  library.test.cpp  library_lib.test.cpp  overload.test.cpp  property.test.cpp  property_tests.h  proxy_map.test.cpp  proxy_property.test.cpp  signal.test.cpp  slot.test.cpp  trackable.test.cpp  utility.test.cpp  value_ptr.test.cpp
tests/core/traits/: are_convertible.test.cpp  are_same.test.cpp  arity.test.cpp  number_of_bits.test.cpp
tests/core/utility/: approximate_equal_to.test.cpp  bound.test.cpp  norm.test.cpp
tests/css/: color.test.cpp  grammar.test.cpp  ostream.h  test_rule.h
tests/css/grammar/: align_content.test.cpp  align_items.test.cpp  align_self.test.cpp  angle.test.cpp  animation.test.cpp  background.test.cpp  box_decoration_break.test.cpp  box_shadow.test.cpp  box_sizing.test.cpp  caption_side.test.cpp  clear.test.cpp  color.test.cpp  color_stop.test.cpp  conic_gradient.test.cpp  length.test.cpp  linear_gradient.test.cpp  numeric.test.cpp  position.test.cpp  property_symbols_table.test.cpp  quoted_string.test.cpp  radial_gradient.test.cpp  repeating.test.cpp  semantic_checks.test.cpp  semantic_factory.test.cpp  semantic_math.test.cpp  time.test.cpp  timing_function.test.cpp  url.test.cpp
tests/css/grammar/semantic/: convert_to.test.cpp  repeat_value.test.cpp  reset_value.test.cpp
tests/graphics/: color.test.cpp  composite_value_tests.h  position.test.cpp  size.test.cpp  swizzle.test.cpp
tests/gui/: layout.test.cpp  make_element.test.cpp  mock_canvas.h  mock_element.h
tests/gui/layout/: column.test.cpp  row.test.cpp
tests/system/: environment.test.cpp
